--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         a { text-decoration: none; color: inherit; transition: 0.3s; }
 
-        /* --- BACKGROUND BLOBS (Reduced for performance on mobile) --- */
+        /* --- BACKGROUND BLOBS --- */
         .bg-blob {
             position: absolute; border-radius: 50%; filter: blur(60px);
             z-index: -1; opacity: 0.2; animation: float 10s infinite alternate;
@@ -58,12 +58,10 @@
         }
         .logo { font-size: 1.3rem; font-weight: 800; text-transform: uppercase; letter-spacing: -1px; z-index: 2100;}
 
-        /* Desktop Nav Items */
         .nav-items { display: flex; gap: 40px; }
         .nav-items a { font-size: 0.9rem; font-weight: 700; text-transform: uppercase; }
-        .nav-items a:hover { color: var(--accent-lime); }
+        .nav-items a:hover, .nav-items a.active { color: var(--accent-lime); }
 
-        /* Hamburger Menu Icon */
         .menu-toggle {
             display: none;
             flex-direction: column;
@@ -72,7 +70,7 @@
             z-index: 2100;
         }
         .menu-toggle span {
-            width: 30px; height: 2px; background: white; transition: 0.3s;
+            width: 28px; height: 2px; background: white; transition: 0.4s;
         }
 
         /* --- HERO SECTION --- */
@@ -80,40 +78,44 @@
             min-height: calc(100vh - var(--nav-height));
             display: flex; flex-direction: column;
             justify-content: center; align-items: center; 
-            text-align: center; padding: 40px 20px;
+            text-align: center; padding: 60px 20px;
         }
         .hero h1 {
             font-family: var(--font-display); 
-            font-size: clamp(2.8rem, 12vw, 8rem);
-            line-height: 0.95; font-weight: 800; text-transform: uppercase;
+            font-size: clamp(2.5rem, 11vw, 8rem);
+            line-height: 0.9; font-weight: 800; text-transform: uppercase;
         }
         .hero h1 span { color: transparent; -webkit-text-stroke: 1px rgba(255,255,255,0.4); display: block; }
         
         .hero p {
-            margin-top: 20px;
-            font-size: clamp(0.9rem, 3vw, 1.2rem);
+            margin-top: 25px;
+            font-size: clamp(0.85rem, 2.5vw, 1.1rem);
             color: #aaa;
-            letter-spacing: 1px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            font-weight: 600;
         }
 
         .btn {
             display: inline-block; padding: 18px 45px; background: white; color: black;
             border-radius: 50px; font-weight: 700; font-family: var(--font-display);
-            text-transform: uppercase; margin-top: 35px;
-            width: fit-content;
+            text-transform: uppercase; margin-top: 40px;
+            transition: 0.3s ease;
         }
+        .btn:hover { background: var(--accent-lime); transform: scale(1.05); }
 
-        /* --- MOBILE MENU OVERLAY --- */
+        /* --- MOBILE OVERLAY --- */
         @media (max-width: 850px) {
+            .menu-toggle { display: flex; }
             .nav-items {
                 position: fixed; top: 0; right: -100%; width: 100%; height: 100vh;
                 background: #0d0d0d; flex-direction: column; justify-content: center;
                 align-items: center; transition: 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-                gap: 30px; font-size: 1.5rem;
+                gap: 35px;
             }
             .nav-items.active { right: 0; }
-            .menu-toggle { display: flex; }
-            
+            .nav-items a { font-size: 1.5rem; }
+
             /* Hamburger animation */
             .menu-toggle.active span:nth-child(1) { transform: rotate(45deg) translate(5px, 6px); }
             .menu-toggle.active span:nth-child(2) { opacity: 0; }
@@ -138,7 +140,7 @@
         </div>
 
         <div class="nav-items" id="nav-list">
-            <a href="index.html">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
@@ -147,12 +149,12 @@
 
     <section class="hero">
         <h1>I'm a <br><span>Graphics Designer</span></h1>
-        <p>Packaging • Flyers • Social Media Graphics</p>
-        <a href="portfolio.html" class="btn">View Portfolio</a>
+        <p>Packaging • Flyers • Social Media</p>
+        <a href="portfolio.html" class="btn">Explore Work</a>
     </section>
 
     <footer>
-        <p style="color: #555; font-size: 0.8rem;">&copy; 2026 xinnoxCreatives. All Rights Reserved.</p>
+        <p style="color: #444; font-size: 0.8rem;">&copy; 2026 xinnoxCreatives. All Rights Reserved.</p>
     </footer>
 
     <script>
@@ -162,11 +164,11 @@
         menuToggle.addEventListener('click', () => {
             menuToggle.classList.toggle('active');
             navList.classList.toggle('active');
-            // Prevent scrolling when menu is open
+            // Prevent background scrolling
             document.body.style.overflow = navList.classList.contains('active') ? 'hidden' : 'auto';
         });
 
-        // Close menu when a link is clicked
+        // Close menu when a link is clicked (important for mobile)
         document.querySelectorAll('.nav-items a').forEach(link => {
             link.addEventListener('click', () => {
                 menuToggle.classList.remove('active');
